# QML-Qt

StartingProject/: CMakeLists.txt  Main.qml  main.cpp
classone/: CMakeLists.txt  Main.qml  main.cpp
